# mm-pomodoro

./: .gitignore  Cargo.toml  README.md  build.rs  dict.dic  justfile  rustfmt.toml
proto/: timer.proto
src/: cli.rs  cmd.rs  command.rs  config.rs  db.rs  grpc.rs  history.rs  lib.rs  main.rs  notification.rs  state.rs
src/cmd/: delete_history_cmd.rs  history_cmd.rs  new_cmd.rs  pause_cmd.rs  resume_cmd.rs  status_cmd.rs  stop_cmd.rs
src/command/: history.rs  new.rs  pause.rs  resume.rs  start.rs  status.rs  stop.rs
