[package]
name = "ptimer"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
daemonize = "0.5.0"
tonic = "0.12.0"
prost = "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.4.13"
hyper-util = "0.1.6"
chrono = "0.4.38"


[build-dependencies]
tonic-build = "0.12.0"
